Fix icon alignment in datapoint editor, and remove dead code in generator module
PiperOrigin-RevId: 429114505

--- a/lit_nlp/client/modules/datapoint_editor_module.css
+++ b/lit_nlp/client/modules/datapoint_editor_module.css
@@ -30,8 +30,6 @@
 }
 
 .field-header mwc-icon {
-  font-size: 10pt;
-  line-height: 0;
   vertical-align: middle;
   padding-right: 10px; /* for a larger click target */
 }
